[package]
name = "ssl-manager"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
full = ["cloudflare"]
acme = ["dep:instant-acme", "dep:rustdns"]
cloudflare = ["dep:cloudflare", "dep:pem"]
dns-cloudflare = ["acme", "dep:cloudflare"]
local = ["essentials/dotenv"]

[dependencies]
essentials = { tag = "0.3.7", git = "https://github.com/majksa-dev/rust-essentials", features = [
    "log",
] }
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
anyhow = "1.0.86"
derive_more = { version = "1.0.0", features = ["display"] }
futures-util = "0.3.30"
rand = "0.8.5"
slab = "0.4.9"
serde = "1.0.208"
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
async-trait = "0.1.81"
instant-acme = { version = "0.7.1", optional = true }
rustdns = { version = "0.4.0", optional = true }
rcgen = "0.13.1"
cloudflare = { optional = true, git = "https://github.com/Wyn-Price/cloudflare-rs", branch = "wyn/zone-details" }
pem = { version = "3.0.4", optional = true }
